BLOB download is not being moved to its final destination https://bugs.webkit.org/show_bug.cgi?id=282453 rdar://138012063

Reviewed by Chris Dumez.

This is because we are revoking the sandbox extension to the downloaded file before the system moves
the file to its final location. This patch transfers the sandbox extension to the Download object,
in the same way we do for standard downloads. This change makes sure that we are not revoking the
sandbox extension until the file has been moved to its final location.

* Source/WebKit/NetworkProcess/NetworkDataTaskBlob.cpp:
(WebKit::NetworkDataTaskBlob::didFinishDownload):

Canonical link: https://commits.webkit.org/286037@main